traefik2.2/3-ingress.yaml
#####################################################
# Secure traefik dashboard with https and basic auth
#####################################################

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`traefik.dev.2vcps.io`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    # optional: add basic auth
    middlewares: 
    #- name: basic-auth
    - name: https-redirect
